@@ -18,7 +18,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>11</java.version>
+    <java.version>17</java.version>
   </properties>
 
   <dependencies>
@@ -58,19 +58,19 @@
     <dependency>
       <groupId>com.fazecast</groupId>
       <artifactId>jSerialComm</artifactId>
-      <version>2.5.1</version>
+      <version>2.8.2</version>
     </dependency>
 
     <dependency>
       <groupId>org.dizitart</groupId>
       <artifactId>nitrite</artifactId>
-      <version>3.2.0</version>
+      <version>3.4.3</version>
     </dependency>
 
     <dependency>
       <groupId>com.remondis</groupId>
       <artifactId>remap</artifactId>
-      <version>4.2.0</version>
+      <version>4.2.6</version>
     </dependency>
   </dependencies>
 
@@ -87,6 +87,15 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
